Update GitHub username and repository in script

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 
     <script>
         async function getLastUpdatedTime() {
-            const username = 'nr0025';
-            const repo = 'FY0025';
+            const username = 'fepsfy6932942';
+            const repo = 'FY6932942';
            
             const url = `https://api.github.com/repos/${username}/${repo}/commits`;
             try {
