--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <br>
 
 <h2 id="conclusion">Conclusion</h2>
-<p>DRS allows for greater speed, reduced drag and overtaking. DRS has proved essential for the competitiveness of F1 and encourages aggressive racing making it more entertaining. DRS demonstrates that F1 has undergone an evolution in its approach to racing where engines can only do so much and must incorporate aerodynamics for the development of faster cars. While the DRS is criticised for its simplicity and lack of strategic use, it generates several overtakes which is greater than none. The new Z/X mode is yet to be used however the FIA will encourage energy management, providing more organic overtakes. The drivers will be able to alter the wings angle of attacks and opening and closing making the system more complex will mean skill and strategic plays are required.</p>
+<p>DRS allows for greater speed, reduced drag and overtaking. DRS has proved essential for competitiveness of F1 and encourages aggressive racing making it more entertaining. DRS demonstrates that F1 has undergone an evolution in its approach to racing where engines can only do so much and must incorporate aerodynamics for the development of faster cars. While the DRS is criticised for its simplicity and lack of strategic use, it generates several overtakes which is greater than none. The new Z/X mode is yet to be used however the FIA will encourage energy management, providing more organic overtakes. The drivers will be able to alter the wings angle of attacks and opening and closing making the system more complex will mean skill and strategic plays are required.</p>
 <br>
 
 <h2 id="references">References</h2>
