--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 <br>
 
 <h2 id="introduction">Introduction</h2>
+        <pre id="Introduction_InText">
 <p>“Aerodynamics are for people who can’t build engines” – Enzo Ferrari </p>
 
 <p>Aerodynamics plays a vital role in f1 cars today. Without it, cars would not be able to corner at high speeds, accelerate without taking off the ground and provide competitive racing. The FIA (Fédération Internationale de l'Automobile) controls regulations in F1 and encourage the use of aerodynamics as it allows for closer racing and overtaking, Such as the Drag Reduction System which provides a more entertaining race. This paper will investigate the effects of DRS, how it works and the impact it has had on formula one viewers.</p>
@@ -173,6 +174,7 @@
 <br>
 
 <h2 id="conclusion">Conclusion</h2>
+    <p id= "analysis_InText">
 <p>DRS allows for greater speed, reduced drag and overtaking. DRS has proved essential for competitiveness of F1 and encourages aggressive racing making it more entertaining. DRS demonstrates that F1 has undergone an evolution in its approach to racing where engines can only do so much and must incorporate aerodynamics for the development of faster cars. While the DRS is criticised for its simplicity and lack of strategic use, it generates several overtakes which is greater than none. The new Z/X mode is yet to be used however the FIA will encourage energy management, providing more organic overtakes. The drivers will be able to alter the wings angle of attacks and opening and closing making the system more complex will mean skill and strategic plays are required.</p>
 <br>
 
@@ -196,10 +198,7 @@
 
 ‌</li>
         </ol>
-</html>
-    
-
-<script>   <!-- //////////////////////////////////////////////////////////////////////////////// -->
+    <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Adding last update ////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
     <!-- Last commit time display -->
@@ -213,7 +212,7 @@
         const username = 'fepsfy6932942';
         const repo = 'FY6932942';
        
-        const url = `fepsfy6932942.github.com/FY6932942/${fepsfy6932942}/${FY6932942}/commits`;
+        const url = `https://api.github.com/repos/${username}/${repo}/commits`;
         try {
             const response = await fetch(url, {
                 method: 'GET',
@@ -270,16 +269,17 @@
   // Function to calculate and display total word count from selected sections
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
-    const IntroductionCount = displayWordCount("Introduction");
-    const ConclusionCount = displayWordCount("Conclusion");
+    const IntroductionCount = displayWordCount("Introduction_InText");
+    const AnalysisCount = displayWordCount("Analysis_InText");
     // Calculate the sum of all selected sections
-    const totalWordCount = IntroductionCount + ConclusionCount;
+    const totalWordCount = IntroductionCount + AnalysisCount;
     // Display the total word count
     document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
   // Run the function for specific sections and display total count when the page loads
   window.onload = displayTotalWordCount;
 </script>
+
 
 
 
